# play-outside

./: .gitignore  Dockerfile  README.md  deployment.yaml  docker-compose.yml  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
play_outside/: __about__.py  api.py  config.py  decorators.py  queries.py
play_outside/cli/: api.py
static/: app.css
tailwind/: app.css
templates/: base.html  card.html  card.txt  includestyles.html  index.html  index.txt
